Created React UI and backend with Java